@@ -1,3 +1,10 @@
+2003-10-01  Takashi Iwai <tiwai@suse.de>
+
+	* timidity/aRts_a.c, timidity/output.c: Removed arts2 output mode,
+	  which is identical with arts mode, indeed.
+	  Fixed wrong cast of pointer to integer.
+	  Fixed the detect function of aRts.
+
 2003-09-30  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
 	* configure.in:
